add code climate to test java client

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,13 @@ cache:
   directories:
   - ~/.m2
 
+addons:
+  code_climate:
+    repo_token: 8ab91d5f9ca6881a3ab17f4fca149e6dfefba2b4
+
+after_script:
+  - codeclimate-test-reporter < lcov.info
+
 os:
   - linux
 
